--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 10:59:00 PM</p>
+    <p class="lastupdate">09/12/2020 11:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">64.0&#176;F</td>
+        <td class="data">63.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">64.0&#176;F</td>
+        <td class="data">63.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">64.0&#176;F</td>
+        <td class="data">63.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.880 inHg (0.035)</td>
+        <td class="data">29.883 inHg (0.036)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSE (158&#176;)</td>
+        <td class="data">1 mph ENE (68&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 8 hours, 12 minutes</td>
+      <td class="data">11 days, 8 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 8 hours, 12 minutes</td>
+      <td class="data">11 days, 8 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
